ANDROID: GKI: Add symbol list for Transsion
Add symbol list for Transsion

4 variable symbol(s) added
  'unsigned long avenrun[3]'
  'DEFINE_PER_CPU(struct kernel_stat, kstat)'
  'DEFINE_PER_CPU(struct kernel_cpustat, kernel_cpustat)'
  'DEFINE_PER_CPU(struct vm_event_state, vm_event_states)'

Bug: 310505482
Change-Id: I96affa0a092e35f9193af08dfd462323874cf6de
Signed-off-by: Dongyun Liu <dongyun.liu@transsion.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -105,6 +105,7 @@ filegroup(
         "android/abi_gki_aarch64_qcom",
         "android/abi_gki_aarch64_rtkstb",
         "android/abi_gki_aarch64_rtktv",
+        "android/abi_gki_aarch64_transsion",
         "android/abi_gki_aarch64_tuxera",
         "android/abi_gki_aarch64_virtual_device",
         "android/abi_gki_aarch64_xiaomi",
